Updated build.sh