@@ -90,6 +90,8 @@
         <skipSourceGeneration>true</skipSourceGeneration>
         <skipJavadocGeneration>true</skipJavadocGeneration>
 
+        <!-- will be filled at runtime by the plugin -->
+        <jacoco.agent.argLine/>
     </properties>
 
     <modules>
@@ -330,6 +332,7 @@
                         <threadCount>4</threadCount>
                         <runOrder>failedfirst</runOrder>
                         <jvm>${env.JAVA7_HOME}/bin/java</jvm>
+                        <argLine>${jacoco.agent.argLine} -Xmx2048m</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -345,6 +348,7 @@
                             <exclude>**/manual/**</exclude>
                             <exclude>**/broken/**</exclude>
                         </excludes>
+                        <argLine>${jacoco.agent.argLine} -Xmx4096m -XX:MaxPermSize=512M</argLine>
                     </configuration>
                     <executions>
                         <execution>
@@ -653,6 +657,9 @@
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>0.7.5.201505241946</version>
+                    <configuration>
+                        <propertyName>jacoco.agent.argLine</propertyName>
+                    </configuration>
                     <executions>
                         <execution>
                             <id>prepare-agent</id>
